# SMFrameWork_CPP

./: CMakeLists.txt
Classes/SMFrameWork/Base/: ColorSprite.cpp  ColorSprite.h  EdgeSwipeLayer.cpp  EdgeSwipeLayer.h  ImageAutoPolygon.cpp  ImageAutoPolygon.h  Intent.cpp  Intent.h  MaskSprite.cpp  MaskSprite.h  MeshSprite.cpp  MeshSprite.h  SMApplication.cpp  SMApplication.h  SMButton.cpp  SMButton.h  SMCircularListView.cpp  SMCircularListView.h  SMImageView.cpp  SMImageView.h  SMMenuTransitionScene.cpp  SMMenuTransitionScene.h  SMMeshView.cpp  SMMeshView.h  SMPageView.cpp  SMPageView.h  SMScene.cpp  SMScene.h  SMSlider.cpp  SMSlider.h  SMTableView.cpp  SMTableView.h  SMView.cpp  SMView.h  SMWebView.cpp  SMWebView.h  SMZoomView.cpp  SMZoomView.h  SceneTransition.cpp  SceneTransition.h  (+9 more)
Classes/SMFrameWork/Bean/: Table1.cpp  Table1.h
Classes/SMFrameWork/Const/: SMFontColor.cpp  SMFontColor.h  SMViewConstValue.cpp  SMViewConstValue.h
Classes/SMFrameWork/Cutout/: BaseCropView.cpp  BaseCropView.h  CropFreeView.cpp  CropFreeView.h  CropRectView.cpp  CropRectView.h  CutoutProcessor.cpp  CutoutProcessor.h  DrawCropView.cpp  DrawCropView.h  DrawView.cpp  DrawView.h  FuncCutout.h
Classes/SMFrameWork/Database/: ContentValue.cpp  ContentValue.h  DBConstant.cpp  DBConstant.h  DBHelper.cpp  DBHelper.h  SQLiteWrapper.cpp  SQLiteWrapper.h
Classes/SMFrameWork/DeviceAsset/: AndroidCamera.cpp  AndroidCamera.h  AppleCamera.h  AppleCamera.mm  CameraConstant.h  DeviceCamera.cpp  DeviceCamera.h  DeviceCamera.mm
Classes/SMFrameWork/ImageProcess/: ImageProcessFunction.cpp  ImageProcessFunction.h  ImageProcessor.cpp  ImageProcessor.h  ImgPrcSimpleCapture.h  ImgPrcSnapShotToLocal.h  ImgPrcUploadData.cpp  ImgPrcUploadData.h
Classes/SMFrameWork/Interface/: BaseTableView.cpp  BaseTableView.h  Dynamics.cpp  Dynamics.h  MotionEvent.h  SMScroller.cpp  SMScroller.h  ScrollController.cpp  ScrollController.h  VelocityTracker.cpp  VelocityTracker.h  ZoomController.cpp  ZoomController.h
Classes/SMFrameWork/MapView/: SMMapView-ini.h  SMMapView.cpp  SMMapView.h  SMMapView.mm  SMMapViewImpl-Android.cpp  SMMapViewImpl-Android.h  SMMapViewImpl-ios.h  SMMapViewImpl-ios.mm
Classes/SMFrameWork/Network/: JsonWrapper.cpp  JsonWrapper.h  JsonWriter.cpp  JsonWriter.h  SMComm.cpp  SMComm.h
Classes/SMFrameWork/Picker/: SMWheelPicker.cpp  SMWheelPicker.h
Classes/SMFrameWork/Popup/: ExtractPopup.cpp  ExtractPopup.h  LoadingPopup.cpp  LoadingPopup.h  Popup.cpp  Popup.h  PopupManager.cpp  PopupManager.h  ProgressPopup.cpp  ProgressPopup.h
Classes/SMFrameWork/SpriteFilter/: FilterShaderString.cpp  FilterShaderString.h  FilterShaderString_pc.cpp  SpriteFilter.h  SpriteFilter1977.cpp  SpriteFilter1977.h  SpriteFilterAmaro.cpp  SpriteFilterAmaro.h  SpriteFilterBrannan.cpp  SpriteFilterBrannan.h  SpriteFilterEarlyBird.cpp  SpriteFilterEarlyBird.h  SpriteFilterHefe.cpp  SpriteFilterHefe.h  SpriteFilterHudson.cpp  SpriteFilterHudson.h  SpriteFilterInkwell.cpp  SpriteFilterInkwell.h  SpriteFilterLomofi.cpp  SpriteFilterLomofi.h  SpriteFilterLordKelvin.cpp  SpriteFilterLordKelvin.h  SpriteFilterNashville.cpp  SpriteFilterNashville.h  SpriteFilterRise.cpp  SpriteFilterRise.h  SpriteFilterSierra.cpp  SpriteFilterSierra.h  SpriteFilterSutro.cpp  SpriteFilterSutro.h  SpriteFilterToaster.cpp  SpriteFilterToaster.h  SpriteFilterValencia.cpp  SpriteFilterValencia.h  SpriteFilterWalden.cpp  SpriteFilterWalden.h  SpriteFilterXproii.cpp  SpriteFilterXproii.h
Classes/SMFrameWork/UI/: ActionBar.cpp  ActionBar.h  AlertView.cpp  AlertView.h  BaseScene.h  Calendar.cpp  Calendar.h  CalendarDayCell.cpp  CalendarDayCell.h  CalendarView.cpp  CalendarView.h  CameraControlLayer.cpp  CameraControlLayer.h  CaptureView.cpp  CaptureView.h  CircleCropSprite.cpp  CircleCropSprite.h  CircularProgress.cpp  CircularProgress.h  DashedRoundRect.cpp  DashedRoundRect.h  DropDownView.cpp  DropDownView.h  FocusingView.cpp  FocusingView.h  GroupSelectView.cpp  GroupSelectView.h  ImagePickerView.cpp  ImagePickerView.h  KenBurnsView.cpp  KenBurnsView.h  LoadingSprite.cpp  LoadingSprite.h  MultiTouchController.cpp  MultiTouchController.h  OverlapContainer.cpp  OverlapContainer.h  ProgressView.cpp  ProgressView.h  PulsActionView.cpp  (+21 more)
Classes/SMFrameWork/Util/: AudioCodecProtocol.h  AudioFrame.cpp  AudioFrame.h  CCImageEx.cpp  CCImageEx.h  DownloadProtocol.h  DownloadTask.cpp  DownloadTask.h  DownloadTaskApple.mm  FileManager.cpp  FileManager.h  FileManager.mm  ImageCache.h  ImageDownloader.cpp  ImageDownloader.h  LRUCache.h  (+46 more)
Classes/Scene/: MainScene.cpp  MainScene.h  SMCocosAppDelegate.cpp  SMCocosAppDelegate.h  SMCocosAppDelegate.mm
Resources/mobileShader/: BilateralBlur.fsh  BilateralBlur.vsh  BilateralBlurBGR.fsh  GenieEffect.fsh  PositionTexture_uColor.fsh  PositionTexture_uColor.vsh  ShapeArcRing.fsh  ShapeCircle.fsh  ShapeCircleHole.fsh  ShapeGradientRect.fsh  ShapeInvertCircle.fsh  ShapeRect.fsh  ShapeRoundRect.fsh  ShapeSolidCircle.fsh  ShapeSolidRect.fsh  ShapeSolidRoundRect.fsh  ShapeSolidTriangle.fsh  ShapeVignetteRect.fsh  SpriteAdjustColor.fsh  SpriteCircle.fsh  SpriteCropCircle.fsh  SpriteGaussianBlur.fsh  SpriteVignette.fsh  bgr2rgb.fsh  mesh.fsh  mesh.vsh  yuv420p2rgb.fsh
Resources/shader/: GenieEffect.fsh  PositionTexture_uColor.fsh  ShapeArcRing.fsh  ShapeCircle.fsh  ShapeCircleHole.fsh  ShapeGradientRect.fsh  ShapeInvertCircle.fsh  ShapeRect.fsh  ShapeRoundRect.fsh  ShapeSolidCircle.fsh  ShapeSolidRect.fsh  ShapeSolidRoundRect.fsh  ShapeSolidTriangle.fsh  ShapeVignetteRect.fsh  SpriteAdjustColor.fsh  SpriteCircle.fsh  SpriteCropCircle.fsh  SpriteGaussianBlur.fsh  SpriteVignette.fsh  bgr2rgb.fsh  mesh.fsh  mesh.vsh  yuv420p2rgb.fsh
Resources/sticker/: items.xml
cocos2d/: README.md
proj.android/: gradle.properties  local.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/SMFrameWork.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: AppController.h  AppController.mm  DeviceSecurityPlugin.h  DeviceSecurityPlugin.m  Info.plist  RootViewController.mm
proj.ios_mac/mac/: Info.plist  main.cpp
(+64 files in other folders)
